--- a/docs/playbook/PLB-2022.md
+++ b/docs/playbook/PLB-2022.md
@@ -1,4 +1,7 @@
-# 2022 PLAYBOOK
+# PLAYBOOK 2022
+
+### Criar o pacote Portugython e publicar no `pypi`
+* [PLB-0] Implementado: Criado o pacote na plataforma
 
 ### Implementar todas as funções contidas no builtins
 * [PLB-1] Implementado: <NOME_DA_FUNCAO>
