--- a/docs/playbook/PLB-2022.md
+++ b/docs/playbook/PLB-2022.md
@@ -1,7 +1,7 @@
 # PLAYBOOK 2022
 
-### Criar o pacote Portugython e publicar no `pypi`
-* [PLB-0] Implementado: Criado o pacote na plataforma
+<del>### Criar o pacote Portugython e publicar no `pypi`</del>
+* <del>[PLB-0] Implementado: Criar o pacote na plataforma [pypi](pypi.org)</del>
 
 ### Implementar todas as funções contidas no builtins
 * [PLB-1] Implementado: <NOME_DA_FUNCAO>
