--- a/docs/playbook/PLB-2022.md
+++ b/docs/playbook/PLB-2022.md
@@ -4,6 +4,7 @@
 * <del>[PLB-0] Implementado: Criar o pacote na plataforma [pypi](pypi.org)</del>
 
 ### Implementar todas as funções contidas no builtins
+Implementar as funções como traduzões diretas, tais como: `imprima = print`
 * [PLB-1] Implementado: <NOME_DA_FUNCAO>
 
 ### Implementar funções com `def` e não simplesmente uma atribução de função e variável 
