--- a/docs/playbook/PLB-2022.md
+++ b/docs/playbook/PLB-2022.md
@@ -7,7 +7,8 @@
 Implementar as funções como traduzões diretas, tais como: `imprima = print`
 * [PLB-1] Implementado: <NOME_DA_FUNCAO>
 
-### Implementar funções com `def` e não simplesmente uma atribução de função e variável 
+### Implementar funções com `def` e não simplesmente uma atribução de função e variável
+Implementar somente após o termino da PLB-1
 * [PLB-2] Implementado: <NOME_DA_FUNCAO>
 
 ### Implementar exceções em português
